add mock trade
